updated the pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <mat-toolbar color="primary">
-  <span>Task Management Application</span>
-  <span class="spacer"></span>
-  <a mat-button routerLink="/tasks">Task List</a>
-  <a mat-button routerLink="/tasks/add">Add Task</a>
-</mat-toolbar>
-
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
+    <a routerLink="/tasks">Task Management Application</a>
+    <span class="spacer"></span>
+ 
+  </mat-toolbar>
+  
+  <div class="container">
+    <router-outlet></router-outlet>
+  </div>
