--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
-/* You can add global styles to this file, and also import other style files */
+// Add specific Angular Material theming
+@import '~@angular/material/theming';
+@include mat-core();
+
+$primary: mat-palette($mat-indigo);
+$accent: mat-palette($mat-pink, A200, A100, A400);
+
+$theme: mat-light-theme(
+  (
+    color: (
+      primary: $primary,
+      accent: $accent,
+    )
+  )
+);
+
+@include angular-material-theme($theme);
