--- a/src/app/tasks/task-add/task-add.component.scss
+++ b/src/app/tasks/task-add/task-add.component.scss
@@ -1,10 +1,19 @@
 @import 'src/assets/styles/_variables';
 
 
+.task-card {
+  width: 60%;
+  margin: 16px auto; /* Center the card horizontally */
+  padding: 16px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
 .form-row {
   display: flex;
   justify-content: space-between;
 }
+
 
 mat-card {
   margin: $spacing;
