--- a/src/app/tasks/task-add/task-add.component.html
+++ b/src/app/tasks/task-add/task-add.component.html
@@ -20,9 +20,9 @@
         <mat-form-field appearance="fill" style="flex: 1; margin-left: 8px;">
           <mat-label>Priority</mat-label>
           <mat-select formControlName="priority" required>
-            <mat-option value="Low">Low</mat-option>
-            <mat-option value="Medium">Medium</mat-option>
-            <mat-option value="High">High</mat-option>
+            <mat-option value="low">Low</mat-option>
+            <mat-option value="medium">Medium</mat-option>
+            <mat-option value="high">High</mat-option>
           </mat-select>
         </mat-form-field>
       </div>
