--- a/src/app/tasks/task-edit/task-edit.component.html
+++ b/src/app/tasks/task-edit/task-edit.component.html
@@ -19,9 +19,9 @@
       <mat-form-field appearance="fill">
         <mat-label>Priority</mat-label>
         <mat-select formControlName="priority" required>
-          <mat-option value="Low">Low</mat-option>
-          <mat-option value="Medium">Medium</mat-option>
-          <mat-option value="High">High</mat-option>
+          <mat-option value="low">Low</mat-option>
+          <mat-option value="medium">Medium</mat-option>
+          <mat-option value="high">High</mat-option>
         </mat-select>
       </mat-form-field>
       <button mat-raised-button color="primary" type="submit" [disabled]="taskForm.invalid">Update Task</button>
