added back btns

--- a/src/app/tasks/task-add/task-add.component.scss
+++ b/src/app/tasks/task-add/task-add.component.scss
@@ -22,6 +22,11 @@ mat-card {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
+.add-btn{
+  margin: $spacing;
+  color: azure !important;
+}
+
 
 :host {
   display: block;
