--- a/src/app/tasks/task-edit/task-edit.component.html
+++ b/src/app/tasks/task-edit/task-edit.component.html
@@ -1,3 +1,4 @@
+<button mat-button class="add-btn" routerLink="/tasks">Back</button>
 <mat-card class="task-card">
   <mat-card-title>Edit Task</mat-card-title>
   <mat-card-content>
